Mejoras visuales y sección de productos

--- a/index.html
+++ b/index.html
@@ -3,29 +3,126 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Distribuciones Multiaaseo HYS SAS</title>
+  <title>Distribuciones Multiaseo HYS SAS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <header>
-    <h1>DISTRIBUCIONES MULTIASEO HYS SAS</h1>
-    <p>Comercializadora – Centro de Bogotá</p>
-  </header>
+<header class="header">
+  <div class="logo">
+    <h1>MultiAseo HYS</h1>
+    <span>Distribuciones</span>
+  </div>
+  <a class="btn-whatsapp" href="#">WhatsApp</a>
+</header>
 
-  <section>
-    <h2>Información</h2>
-    <p><strong>NIT:</strong> 901.132.074-1</p>
-    <p><strong>Dirección:</strong> Calle 11 #17-58</p>
-    <p><strong>Celular:</strong> 311 294 5500</p>
-    <p><strong>Teléfono:</strong> 927 9214</p>
-  </section>
+<section class="hero">
+  <h2>Los mejores productos de aseo al mejor precio</h2>
+  <p>
+    Comercializamos marcas líderes como <strong>La Catleya, Unilever, Familia,
+    Colgate, Axion</strong> y muchas más.
+  </p>
+  <a href="#" class="btn-primary">Contáctanos</a>
+</section>
 
-  <section>
-    <a href="https://wa.me/573112945500" class="btn">
-      Contactar por WhatsApp
-    </a>
-  </section>
+<section class="brands">
+  <h3>Marcas que distribuimos</h3>
+  <div class="brand-strip">
+    <img src="img/la-catleya.jpg" alt="La Catleya">
+    <img src="img/unilever.jpg" alt="Unilever">
+    <img src="img/familia-logo.jpg" alt="Familia">
+    <img src="img/colgate.jpg" alt="Colgate">
+    <img src="img/PYG.jpg" alt="P&G">
+    <img src="img/elite.jpg" alt="Elite">
+    <img src="img/dersa.jpg" alt="Dersa">
+  </div>
+</section>
+
+<section class="products">
+  <h3>Nuestros productos</h3>
+  <div class="product-grid">
+    <div class="card">
+  <img src="img/suavizantes.jpg" alt="Suavizantes Catleya">
+  <p>Suavizantes</p>
+</div>
+
+<div class="card">
+  <img src="img/jabon-ropa.jpg" alt="Jabón para ropa">
+  <p>Jabón para ropa</p>
+</div>
+
+<div class="card">
+  <img src="img/manos.jpg" alt="Jabón para manos">
+  <p>Jabón para manos</p>
+</div>
+
+<div class="card">
+  <img src="img/papel.jpg" alt="Papel higiénico">
+  <p>Papel higiénico</p>
+</div>
+
+<div class="card">
+  <img src="img/aromatizantes.jpg.png" alt="aromatizantes">
+  <p>aromatizantes</p>
+</div>
+
+<div class="card">
+  <img src="img/desengrasante.jpg" alt="desengrasante">
+  <p>desengrasantes</p>
+</div>
+
+<div class="card">
+  <img src="img/galones.jpg" alt="galones">
+  <p>galones</p>
+</div>
+
+<div class="card">
+  <img src="img/limpia-pisos.jpg" alt="limpia-pisos">
+  <p>limpia pisos</p>
+</div>
+
+<div class="card">
+  <img src="img/Desodorantes.jpg" alt="Desodorantes">
+  <p>Desodorantes</p>
+</div>
+
+<div class="card">
+  <img src="img/Blanqueador.jpg" alt="Blanqueadores">
+  <p>Blanqueadores</p>
+</div>
+
+  </div>
+</section>
+
+<section class="contact">
+  <h3>Contáctanos</h3>
+  <p><strong>Dirección:</strong> Calle 11 #17-58</p>
+  <p><strong>Cel:</strong> 311 294 5500</p>
+  <p><strong>Tel:</strong> 9279214</p>
+  <p><strong>Email:</strong> distribucionesmultiaseohys@gmail.com</p>
+
+  <div class="socials">
+    <span>Facebook</span>
+    <span>Instagram</span>
+    <span>WhatsApp</span>
+  </div>
+</section>
+
+<footer>
+  <p>
+    © 2026 DISTRIBUCIONES MULTIASEO HYS SAS – NIT 901.132.074-1
+  </p>
+</footer>
+<a
+  href="https://wa.me/573112945500"
+  class="whatsapp-float"
+  target="_blank"
+  title="Contáctanos por WhatsApp"
+>
+  💬
+</a>
 
 </body>
 </html>
+
